@@ -1,0 +1,26 @@
+package org.osm2world.viewer.control.actions;
+
+import java.awt.event.ActionEvent;
+import java.awt.event.KeyEvent;
+
+import javax.swing.AbstractAction;
+import javax.swing.KeyStroke;
+
+/**
+ * closes the application */
+public class ExitAction extends AbstractAction {
+		
+	public ExitAction() {
+		super("Exit");
+		putValue(SHORT_DESCRIPTION, "Closes the application");
+		putValue(MNEMONIC_KEY, KeyEvent.VK_X);
+		putValue(ACCELERATOR_KEY, KeyStroke.getKeyStroke(
+				KeyEvent.VK_Q, ActionEvent.CTRL_MASK));
+	}
+	
+	@Override
+	public void actionPerformed(ActionEvent e) {
+		System.exit(0);
+	}
+	
+}
