@@ -1,4 +1,11 @@
 --------------------------------------------------------------------------------
+ OSM2World 0.1.7                                                     2011-??-?? 
+--------------------------------------------------------------------------------
+ 
+ * new Exit action (menu item and shortcut)
+ 
+ 
+--------------------------------------------------------------------------------
  OSM2World 0.1.6                                                     2011-05-16 
 --------------------------------------------------------------------------------
  
